--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=auth-service
+spring.application.name=identity-service
 server.port=8443
 
 eureka.client.instance.preferIpAddress= true
